2007-10-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script-private.h:
	* clutter/clutter-script.h:
	* clutter/clutter-script.c: Add licensing information to
	the newly added files.

	* clutter/clutter-script.c: Support creating behaviours with
	ClutterScript. ClutterAlpha objects are implicit, but
	timelines can be both explicit objects using their id or
	implicit objects. Make the property resolution and translation
	more robust. Support the pixbuf property.

	* tests/test-script.c: Test the newly added features.

	* docs/reference/clutter-docs.sgml:
	* docs/reference/clutter-sections.txt: Add ClutterScript.

2007-10-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-fixed.h: Add deprecation guards around
	CLUTTER_FIXED_INT().

2007-10-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c: Parse ClutterMargin and ClutterPadding
	properties from arrays or integers (assume pixels).

2007-10-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script-private.h:
	* clutter/clutter-script.c: Allow defining childrens for every
	container actor inside the UI definition files.

2007-10-08  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* clutter/clutter-private.h:
	* clutter/clutter-main.c:
	Add a hash to global clutter context mapping all parented actor
	id's to actors. 
	Add clutter_get_actor_by_id() call.
	Convert picking machinery to use above.
	(performance/simpler composite actor creation)
	
	* clutter/clutter-stage.c: (clutter_stage_fullscreen),
	(clutter_stage_unfullscreen), (clutter_stage_event):
	Only set the fullscreen property on stage state fullscreen event(#545)
	Experimental as could be painful to implement on non X backends.

2007-10-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c (json_parse_end):
	* clutter/json/json-object.c (json_object_get_members): Replace